[package]
name = "rt"
version = "0.1.0"
authors = ["ishbosamiya <ishbosamiya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra-glm = { version = "0.13", features = ["serde-serialize"] }
rand = "0.8"
crossbeam-channel = "0.5"
crossbeam = "0.8"
lazy_static = "1.4"
gl = "0.14"
paste = "1.0"
generational-arena = { version = "0.2", features = ["serde"] }
itertools = "0.10"
glfw = "0.41"
egui = "0.14"
egui_glfw = { git = "ssh://git@github.com/ishbosamiya/egui_glfw.git" }
enumflags2 = "0.7"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
typetag = "0.1"

[dev-dependencies]
criterion = { version = "0.3.4", features = ["html_reports"]}

[[bench]]
name = "ray_collision_bench"
harness = false

[profile.bench]
debug = true

[profile.release]
debug = true

[features]
mesh_no_bvh = []
scene_no_bvh = []