[package]
name = "rt"
version = "0.1.0"
authors = ["ishbosamiya <ishbosamiya@gmail.com>"]
edition = "2018"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra-glm = { version = "0.13", features = ["serde-serialize"] }
rand = "0.8"
crossbeam-channel = "0.5"
crossbeam = "0.8"
lazy_static = "1.4"
gl = "0.14"
paste = "1.0"
generational-arena = { version = "0.2", features = ["serde"] }
itertools = "0.10"
glfw = "0.41"
egui = "0.14"
egui_glfw = { git = "ssh://git@github.com/ishbosamiya/egui_glfw.git" }
enumflags2 = "0.7"
rayon = "1.5"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
typetag = "0.1"
rfd = "0.5"
image = "0.23"
clap = "2.33"
pbr = "1.0"
ipc-channel = "0.15"

[dev-dependencies]
criterion = { version = "0.3.4", features = ["html_reports"]}

[[bench]]
name = "ray_collision_bench"
harness = false

[profile.bench]
debug = true

[profile.release]
debug = true

[workspace]
members = [
	"testing_framework",
]

[features]
mesh_no_bvh = []
scene_no_bvh = []

[[bin]]
name = "main"

[[bin]]
name = "blank_3d"

[[bin]]
name = "vector_math_visualize"

[patch.crates-io]
generational-arena = { git = "ssh://git@github.com/JOE1994/generational-arena.git", branch = 'fix_bug' }