[package]
name = "rt"
version = "0.4.0+dev"
authors = ["ishbosamiya <ishbosamiya@gmail.com>"]
edition = "2018"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra-glm = { version = "0.13", features = ["serde-serialize"] }
rand = "0.8"
lazy_static = "1.4"
gl = "0.14"
paste = "1.0"
generational-arena = { version = "0.2", features = ["serde"] }
itertools = "0.10"
glfw = "0.41"
egui_glfw = { git = "ssh://git@github.com/ishbosamiya/egui_glfw.git" }
enumflags2 = "0.7"
rayon = "1.5"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
typetag = "0.1"
rfd = "0.5"
image = "0.23"
clap = "2.33"
pbr = "1.0"
ipc-channel = "0.15"
ctrlc = { version = "3.2", features = ["termination"] }
embree_rust = { git = "ssh://git@github.com/ishbosamiya/embree_rust.git" }
memoffset = "0.6"
blend = "0.6"

[dev-dependencies]
criterion = "0.3"

[profile.release]
debug = true

[profile.bench]
debug = true

[workspace]
members = [
	"testing_framework",
]

[features]
default = ["use_embree"]
mesh_no_bvh = []
scene_no_bvh = []
use_embree = []

[[bin]]
name = "main"

[[bin]]
name = "blank_3d"

[[bin]]
name = "vector_math_visualize"

[[bench]]
name = "ray_trace_benchmark"
harness = false

[[bench]]
name = "bvh_benchmark"
harness = false

[patch.crates-io]
generational-arena = { git = "ssh://git@github.com/JOE1994/generational-arena.git", branch = 'fix_bug' }
blend = { git = "ssh://git@github.com/ishbosamiya/blend.git" }