[package]
name = "testing_framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
glm = "0.2.3"
is_executable = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }