[package]
name = "testing_framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
nalgebra-glm = { version = "0.13", features = ["serde-serialize"] }
is_executable = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
ipc-channel = "0.15"
pbr = "1.0"
ctrlc = { version = "3.2", features = ["termination"] }
rt = { path = ".." }